# gaokao

./: .gitattributes  .gitignore  COLD_ALGORITHM.md  deploy_and_sync_guangdong.sh  deploy_full.sh  deploy_tat.py  deploy_to_server.sh  mega.theyuanxi_deploy.sh  stop-services.command  sync_all_provinces.py  sync_guangdong_to_server.py  theyuanxi_deploy.sh  启动测试.command  鍋滄鏈嶅姟.command  鍚姩娴嬭瘯.command
backend/: .env.example  database.py  import_employment_pdfs.py  import_provinces.py  main.py  pyproject.toml  requirements.txt  test_algorithm_brutal.py  test_hidden_gem_v2.py
backend/algorithms/: arima_model.py  calibration.py  cold_score_engine.py  hidden_gem.py  industry_signals.py  monte_carlo.py  population_data.py  portfolio_optimizer.py  rank_method.py  swarm_predictor.py
backend/data/: city_salary_coefficient.json  import_all_v2.py  import_real_data.py  listed_company_salary_benchmark.json  major_demand_from_recruitment.json  michael_page_salary_2026.json  order_class_2025.json  recruitment_analysis_summary.json  seed_data.py  top_employers_2024.json
backend/migrations/: add_indexes.sql
backend/routers/: admin.py  agent.py  auth.py  payment.py  report.py  track.py  tracking.py
backend/scrapers/: aliyun_salary_api.py  cdn_scraper.py  chsi_employment_scraper.py  chsi_scraper.py  community_employment_scraper.py  debug_page.py  employment_playwright_scraper.py  excel_importer.py  import_desktop_data.py  import_industry_salary.py  import_michael_page.py  import_ruanke_rankings.py  import_school_enrichment.py  playwright_scraper.py  province_scraper.py  (+4 more)
(+93 files in other folders)
